Rounded corner fix, extra padding if showing single electorate

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -180,6 +180,7 @@ $url-font-serif: '#{$url-fonts-root}abcserif/abcserif';
         }
       }
       td {
+        padding-top: 1rem;
         padding-bottom: 1rem;
       }
       td:global(.name) {
@@ -195,7 +196,6 @@ $url-font-serif: '#{$url-fonts-root}abcserif/abcserif';
           position: relative;
           border-radius: 0.5rem;
           border: 3px solid currentColor;
-          overflow: hidden;
           width: 100%;
           height: 3rem;
           display: block;
@@ -230,6 +230,9 @@ $url-font-serif: '#{$url-fonts-root}abcserif/abcserif';
     :global(.results) {
       font-size: 1.25rem;
       table {
+        td {
+          padding-top: 0;
+        }
         td:global(.chart) {
           > span {
             height: 2.5rem;
@@ -242,6 +245,9 @@ $url-font-serif: '#{$url-fonts-root}abcserif/abcserif';
     :global(.results) {
       font-size: 1rem;
       table {
+        td {
+          padding-top: 0;
+        }
         td:global(.chart) {
           > span {
             height: 2rem;
